<resources>
    <string name="app_name">CSCB07</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to our App!</string>
    <string name="welcome_message">Please choose what type of user you are:</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="login_create">Login/Create Account</string>
    <string name="welcome_patient">Welcome Patient! Please Log In:</string>
    <string name="welcome_doctor">Welcome Doctor, Please Log In:</string>
    <string name="or">OR</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
...
